--- a/style.css
+++ b/style.css
@@ -40,3 +40,71 @@ p {
     margin-bottom: 10px;
   }
 /* --Index Page End-- */
+.p a{
+  text-decoration: none;
+}
+/* Profile Page STart */
+.user-container{
+	margin-top: 15px;
+	width: 100%;
+	height: 100%;
+	align-items: center;
+	display: flex;
+	align-content: space-around;
+	justify-content: center;
+	flex-wrap: wrap;
+	flex-direction: column;
+  }
+/* Profile Page End */
+
+/* Registration Page Start */
+.fname{
+	margin-top:24px;
+	text-align: center;
+  }
+  
+  form input{
+	margin: 20px;
+	padding: 20px;
+	width: 80%;
+	font-size: 0.9rem;
+	border-radius: 15px;
+  }
+  .f-btn{
+	padding: 10px 30px;
+	background: var(--clr-primary);
+	border-radius: 40px;
+	font-size: 20px;
+	font-weight: 400;
+	text-decoration: none;
+	color: #fff;
+	background-color: #111;
+	display: inline-block;
+	cursor: pointer;
+	margin-bottom: 20px;
+  }
+  .f-btn:hover{
+	background: #39b6a7;
+  }
+
+  /* Login Page Start */
+.login-window{
+	width: 100%;
+	align-items: center;
+	display: flex;
+	align-content: space-around;
+	justify-content: center;
+	flex-wrap: wrap;
+	flex-direction: column;
+  }
+/* Login Page End */
+
+/* Footer */
+.footer {
+  padding: 30px 0;
+  background: radial-gradient(#111, #071a1a);
+  border-top: 1px solid #fff;
+  text-align: center;
+}
+
+/* End Footer */
